Fix wrong method used