@@ -96,7 +96,7 @@ public abstract class AbstractStoreIT {
     public static final String B = "B";
     public static final String C = "C";
     public static final String D = "D";
-    public static final List<String> VERTEX_PREFIXES = List.of(A, B, C, D);
+    public static final List<String> VERTEX_PREFIXES = Arrays.asList(A, B, C, D);
 
     // Identifiers
     public static final String SOURCE_1 = SOURCE + 1;
